search API : subquery error
